ping-pong/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  ping-pong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      volumes:
        - name: shared-log
          persistentVolumeClaim:
            claimName: image-claim
      containers:
      - name: ping-pong
        image: kassudin/pingpong:1.3
        volumeMounts:
          - name: shared-log
            mountPath: /usr/src/app/files
